--- a/docs/carmore-icon/overview.mdx
+++ b/docs/carmore-icon/overview.mdx
@@ -3,6 +3,8 @@ id: overview
 title: Overview
 ---
 
+import Link from '@docusaurus/Link';
+
 import OverviewBox from '@site/src/components/OverviewBox';
 import Flex from '@site/src/components/Flex';
 
@@ -14,18 +16,22 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 _아래 카드들을 클릭하면 각 아이콘의 상세 페이지로 이동합니다._
 
 <Flex fullWidth direction={'row'} wrap={'wrap'} justifyContent={'flex-start'} gap={'2rem'}>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'arrow-double-down'} />
-      <p className={'iconLabel'}>arrow-double-down</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="arrow-double-up" />
-      <p className="iconLabel">arrow-double-up</p>
-    </Flex>
-  </OverviewBox>
+  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/arrow-double-down'}>
+    <OverviewBox>
+      <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
+        <CarmoreIcon width={60} height={60} icon={'arrow-double-down'} />
+        <p className={'iconLabel'}>arrow-double-down</p>
+      </Flex>
+    </OverviewBox>
+  </Link>
+  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/arrow-double-up'}>
+    <OverviewBox>
+      <Flex direction="column" gap="0.5rem" alignItems="center">
+        <CarmoreIcon width={60} height={60} icon="arrow-double-up" />
+        <p className="iconLabel">arrow-double-up</p>
+      </Flex>
+    </OverviewBox>
+  </Link>
   <OverviewBox>
     <Flex direction="column" gap="0.5rem" alignItems="center">
       <CarmoreIcon width={60} height={60} icon="arrow-down" />
