REFACTOR: 아토믹 디자인패턴 적용 및 컴포넌트 분리

--- a/docs/carmore-icon/icons/back-btn.mdx
+++ b/docs/carmore-icon/icons/back-btn.mdx
@@ -3,18 +3,17 @@ id: back-btn
 title: BackBtn
 ---
 
-import BorderBox from '@site/src/components/BorderBox';
-import Flex from '@site/src/components/Flex';
+import IconProfile from '@site/src/molecules/carmore-icon/IconProfile';
 
-import { CarmoreIcon } from '@o2-ui/carmore-icon';
+import A11yCompareList from '@site/src/organisms/carmore-icon/A11yCompareList';
+import ColorCompareList from '@site/src/organisms/carmore-icon/ColorCompareList';
+import SizeCompareList from '@site/src/organisms/carmore-icon/SizeCompareList';
 
 # BackBtn
 
 <br />
 
-<BorderBox>
-  <CarmoreIcon className={'textPrimaryLight'} icon={'back-btn'} width={'15rem'} height={'15rem'} />
-</BorderBox>
+<IconProfile icon={'back-btn'} />
 
 ## 사용법
 
@@ -35,19 +34,12 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 
 아이콘의 크기는 `width` 와 `height` 속성으로 조절할 수 있습니다.
 
-- 숫자를 직접 지정할 수 있으며, px, rem, % 같은 단위가 포함된 문자열도 허용됩니다.
+- 숫자를 직접 지정할 수 있으며, 'px', 'rem', '%' 같은 단위가 포함된 문자열도 허용됩니다.
   - (단, 아이콘의 원래 비율은 고정되어 있어 변경할 수 없습니다.)
 - `width` 의 기본값은 '1.5rem' 입니다.
 - `height` 의 기본값은 '1.5rem' 입니다.
 
-<BorderBox>
-  <Flex direction={'row'} gap={'2rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textPrimary'} icon={'back-btn'} />
-    <CarmoreIcon icon={'back-btn'} width={30} height={30} />
-    <CarmoreIcon icon={'back-btn'} width={'3rem'} height={'3rem'} />
-    <CarmoreIcon icon={'back-btn'} width={'5rem'} height={'5rem'} />
-  </Flex>
-</BorderBox>
+<SizeCompareList icon={'back-btn'} sizes={['1.5rem', 30, '48px', '5rem']} />
 
 ```tsx
 <CarmoreIcon icon={'back-btn'} ... /> // 기본값('1.5rem') 적용
@@ -63,18 +55,7 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 
 `className`을 통해 텍스트 색상(color)을 지정하면 아이콘의 색상이 변경됩니다.
 
-- 기본 색상은 프로젝트의 전역 CSS 설정에 따라 결정됩니다.
-- 일부 아이콘은 색상 변경이 제한될 수 있으므로, 해당 아이콘의 상세 페이지를 참고해야 합니다.
-
-<BorderBox>
-  <Flex direction={'row'} gap={'2rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textRed'} icon={'back-btn'} width={60} height={60} />
-    <CarmoreIcon className={'textOrange'} icon={'back-btn'} width={60} height={60} />
-    <CarmoreIcon className={'textGreen'} icon={'back-btn'} width={60} height={60} />
-    <CarmoreIcon className={'textBlue'} icon={'back-btn'} width={60} height={60} />
-    <CarmoreIcon className={'textPurple'} icon={'back-btn'} width={60} height={60} />
-  </Flex>
-</BorderBox>
+<ColorCompareList icon={'back-btn'} colors={['red', 'orange', 'green', 'blue', 'purple']} />
 
 ```css
 .text-red {
@@ -113,18 +94,12 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 
 `role`, `aria-label` 등의 속성을 설정하는 것을 권장합니다.
 
-- `role` 의 기본값은 'button' 입니다.
-- `aria-label` 의 기본값은 '뒤로가기' 입니다.
+- `role` 의 기본값은 'img' 입니다.
+- `aria-label` 의 기본값은 '더 아래로' 입니다.
 - 기본 접근성 속성이 적용되어 있지만, 필요에 따라 커스터마이징할 수 있습니다.
 - _(아이콘에 마우스를 올려보세요.)_
 
-<BorderBox>
-  <Flex direction={'row'} gap={'4rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textPrimary'} icon={'back-btn'} width={60} height={60} />
-    <CarmoreIcon icon={'back-btn'} aria-label={'화살표'} width={60} height={60} />
-    <CarmoreIcon icon={'back-btn'} aria-label={'왼쪽 화살표'} width={60} height={60} />
-  </Flex>
-</BorderBox>
+<A11yCompareList icon={'back-btn'} ariaLabels={[undefined, '화살표', '왼쪽 화살표']} />
 
 ```tsx
 <CarmoreIcon icon={'back-btn'} ... /> // 기본값('뒤로가기') 적용
