--- a/docs/carmore-icon/overview.mdx
+++ b/docs/carmore-icon/overview.mdx
@@ -3,627 +3,9 @@ id: overview
 title: Overview
 ---
 
-import Link from '@docusaurus/Link';
-
-import OverviewBox from '@site/src/components/OverviewBox';
-import Flex from '@site/src/components/Flex';
-
-import { CarmoreIcon } from '@o2-ui/carmore-icon';
-
-# Overview
+import OverviewIconList from '@site/src/organisms/carmore-icon/OverviewIconList';
 
 `@o2-ui/carmore-icon`에서 제공하는 모든 아이콘들을 한눈에 확인할 수 있습니다.  
 _아래 카드들을 클릭하면 각 아이콘의 상세 페이지로 이동합니다._
 
-<Flex fullWidth direction={'row'} wrap={'wrap'} justifyContent={'flex-start'} gap={'2rem'}>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/arrow-double-down'}>
-    <OverviewBox>
-      <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-        <CarmoreIcon width={60} height={60} icon={'arrow-double-down'} />
-        <p className={'iconLabel'}>arrow-double-down</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/arrow-double-up'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="arrow-double-up" />
-        <p className="iconLabel">arrow-double-up</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/arrow-down'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="arrow-down" />
-        <p className="iconLabel">arrow-down</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/arrow-up'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="arrow-up" />
-        <p className="iconLabel">arrow-up</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/back-btn'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="back-btn" />
-        <p className="iconLabel">back-btn</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/cancel'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="cancel" />
-        <p className="iconLabel">cancel</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/chat'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="chat" />
-        <p className="iconLabel">chat</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/check'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="check" />
-        <p className="iconLabel">check</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/copy'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="copy" />
-        <p className="iconLabel">copy</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/copy-link'}>
-    <OverviewBox>
-      <Flex direction="column" gap="0.5rem" alignItems="center">
-        <CarmoreIcon width={60} height={60} icon="copy-link" />
-        <p className="iconLabel">copy-link</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-ae" />
-      <p className="iconLabel">country-flag-ae</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-al" />
-      <p className="iconLabel">country-flag-al</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-ar" />
-      <p className="iconLabel">country-flag-ar</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-at" />
-      <p className="iconLabel">country-flag-at</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-au" />
-      <p className="iconLabel">country-flag-au</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-be" />
-      <p className="iconLabel">country-flag-be</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-bg" />
-      <p className="iconLabel">country-flag-bg</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-ca" />
-      <p className="iconLabel">country-flag-ca</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-ch" />
-      <p className="iconLabel">country-flag-ch</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-cl" />
-      <p className="iconLabel">country-flag-cl</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-cr" />
-      <p className="iconLabel">country-flag-cr</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-cy" />
-      <p className="iconLabel">country-flag-cy</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-cz" />
-      <p className="iconLabel">country-flag-cz</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-de" />
-      <p className="iconLabel">country-flag-de</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-dk" />
-      <p className="iconLabel">country-flag-dk</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-do" />
-      <p className="iconLabel">country-flag-do</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-ec" />
-      <p className="iconLabel">country-flag-ec</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-ee" />
-      <p className="iconLabel">country-flag-ee</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-eg" />
-      <p className="iconLabel">country-flag-eg</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-es" />
-      <p className="iconLabel">country-flag-es</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-fi" />
-      <p className="iconLabel">country-flag-fi</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-fj" />
-      <p className="iconLabel">country-flag-fj</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-fr" />
-      <p className="iconLabel">country-flag-fr</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-gb" />
-      <p className="iconLabel">country-flag-gb</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-ge" />
-      <p className="iconLabel">country-flag-ge</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-gr" />
-      <p className="iconLabel">country-flag-gr</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-hr" />
-      <p className="iconLabel">country-flag-hr</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-hu" />
-      <p className="iconLabel">country-flag-hu</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-ie" />
-      <p className="iconLabel">country-flag-ie</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-il" />
-      <p className="iconLabel">country-flag-il</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-in" />
-      <p className="iconLabel">country-flag-in</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-is" />
-      <p className="iconLabel">country-flag-is</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction="column" gap="0.5rem" alignItems="center">
-      <CarmoreIcon width={60} height={60} icon="country-flag-it" />
-      <p className="iconLabel">country-flag-it</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-jm'} />
-      <p className={'iconLabel'}>country-flag-jm</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-jo'} />
-      <p className={'iconLabel'}>country-flag-jo</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-jp'} />
-      <p className={'iconLabel'}>country-flag-jp</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-kw'} />
-      <p className={'iconLabel'}>country-flag-kw</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-la'} />
-      <p className={'iconLabel'}>country-flag-la</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-lk'} />
-      <p className={'iconLabel'}>country-flag-lk</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-lt'} />
-      <p className={'iconLabel'}>country-flag-lt</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-lu'} />
-      <p className={'iconLabel'}>country-flag-lu</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-lv'} />
-      <p className={'iconLabel'}>country-flag-lv</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-ma'} />
-      <p className={'iconLabel'}>country-flag-ma</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-me'} />
-      <p className={'iconLabel'}>country-flag-me</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-mt'} />
-      <p className={'iconLabel'}>country-flag-mt</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-mu'} />
-      <p className={'iconLabel'}>country-flag-mu</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-mx'} />
-      <p className={'iconLabel'}>country-flag-mx</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-my'} />
-      <p className={'iconLabel'}>country-flag-my</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-nl'} />
-      <p className={'iconLabel'}>country-flag-nl</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-no'} />
-      <p className={'iconLabel'}>country-flag-no</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-nz'} />
-      <p className={'iconLabel'}>country-flag-nz</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-pa'} />
-      <p className={'iconLabel'}>country-flag-pa</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-pe'} />
-      <p className={'iconLabel'}>country-flag-pe</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-ph'} />
-      <p className={'iconLabel'}>country-flag-ph</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-pl'} />
-      <p className={'iconLabel'}>country-flag-pl</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-pt'} />
-      <p className={'iconLabel'}>country-flag-pt</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-py'} />
-      <p className={'iconLabel'}>country-flag-py</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-qa'} />
-      <p className={'iconLabel'}>country-flag-qa</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-ro'} />
-      <p className={'iconLabel'}>country-flag-ro</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-rs'} />
-      <p className={'iconLabel'}>country-flag-rs</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-sa'} />
-      <p className={'iconLabel'}>country-flag-sa</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-se'} />
-      <p className={'iconLabel'}>country-flag-se</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-sg'} />
-      <p className={'iconLabel'}>country-flag-sg</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-si'} />
-      <p className={'iconLabel'}>country-flag-si</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-sk'} />
-      <p className={'iconLabel'}>country-flag-sk</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-th'} />
-      <p className={'iconLabel'}>country-flag-th</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-tr'} />
-      <p className={'iconLabel'}>country-flag-tr</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-tw'} />
-      <p className={'iconLabel'}>country-flag-tw</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-us'} />
-      <p className={'iconLabel'}>country-flag-us</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-vn'} />
-      <p className={'iconLabel'}>country-flag-vn</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'country-flag-za'} />
-      <p className={'iconLabel'}>country-flag-za</p>
-    </Flex>
-  </OverviewBox>
-  <Link className={'overviewLink'} to={'/docs/carmore-icon/icons/cs'}>
-    <OverviewBox>
-      <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-        <CarmoreIcon width={60} height={60} icon={'cs'} />
-        <p className={'iconLabel'}>cs</p>
-      </Flex>
-    </OverviewBox>
-  </Link>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'download'} />
-      <p className={'iconLabel'}>download</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'like'} variants={'solid'} />
-      <p className={'iconLabel'}>like</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'loading-spinner'} />
-      <p className={'iconLabel'}>loading-spinner</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'nowhere'} />
-      <p className={'iconLabel'}>nowhere</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'out-link'} />
-      <p className={'iconLabel'}>out-link</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'pin-map'} />
-      <p className={'iconLabel'}>pin-map</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'refresh'} />
-      <p className={'iconLabel'}>refresh</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'reply'} />
-      <p className={'iconLabel'}>reply</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'search'} />
-      <p className={'iconLabel'}>search</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'setting'} />
-      <p className={'iconLabel'}>setting</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'share'} />
-      <p className={'iconLabel'}>share</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'stepper-minus'} />
-      <p className={'iconLabel'}>stepper-minus</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'stepper-plus'} />
-      <p className={'iconLabel'}>stepper-plus</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'switch-arrow'} />
-      <p className={'iconLabel'}>switch-arrow</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'thumb-up'} />
-      <p className={'iconLabel'}>thumb-up</p>
-    </Flex>
-  </OverviewBox>
-  <OverviewBox>
-    <Flex direction={'column'} gap={'0.5rem'} alignItems={'center'}>
-      <CarmoreIcon width={60} height={60} icon={'user'} />
-      <p className={'iconLabel'}>user</p>
-    </Flex>
-  </OverviewBox>
-</Flex>
+<OverviewIconList />
