--- a/docs/carmore-icon/icons/cancel.mdx
+++ b/docs/carmore-icon/icons/cancel.mdx
@@ -3,18 +3,17 @@ id: cancel
 title: Cancel
 ---
 
-import BorderBox from '@site/src/components/BorderBox';
-import Flex from '@site/src/components/Flex';
+import IconProfile from '@site/src/molecules/carmore-icon/IconProfile';
 
-import { CarmoreIcon } from '@o2-ui/carmore-icon';
+import A11yCompareList from '@site/src/organisms/carmore-icon/A11yCompareList';
+import ColorCompareList from '@site/src/organisms/carmore-icon/ColorCompareList';
+import SizeCompareList from '@site/src/organisms/carmore-icon/SizeCompareList';
 
 # Cancel
 
 <br />
 
-<BorderBox>
-  <CarmoreIcon className={'textPrimaryLight'} icon={'cancel'} width={'15rem'} height={'15rem'} />
-</BorderBox>
+<IconProfile icon={'cancel'} />
 
 ## 사용법
 
@@ -35,19 +34,12 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 
 아이콘의 크기는 `width` 와 `height` 속성으로 조절할 수 있습니다.
 
-- 숫자를 직접 지정할 수 있으며, px, rem, % 같은 단위가 포함된 문자열도 허용됩니다.
+- 숫자를 직접 지정할 수 있으며, 'px', 'rem', '%' 같은 단위가 포함된 문자열도 허용됩니다.
   - (단, 아이콘의 원래 비율은 고정되어 있어 변경할 수 없습니다.)
 - `width` 의 기본값은 '1.5rem' 입니다.
 - `height` 의 기본값은 '1.5rem' 입니다.
 
-<BorderBox>
-  <Flex direction={'row'} gap={'2rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textPrimary'} icon={'cancel'} />
-    <CarmoreIcon icon={'cancel'} width={30} height={30} />
-    <CarmoreIcon icon={'cancel'} width={'3rem'} height={'3rem'} />
-    <CarmoreIcon icon={'cancel'} width={'5rem'} height={'5rem'} />
-  </Flex>
-</BorderBox>
+<SizeCompareList icon={'cancel'} sizes={['1.5rem', 30, '48px', '5rem']} />
 
 ```tsx
 <CarmoreIcon icon={'cancel'} ... /> // 기본값('1.5rem') 적용
@@ -63,18 +55,7 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 
 `className`을 통해 텍스트 색상(color)을 지정하면 아이콘의 색상이 변경됩니다.
 
-- 기본 색상은 프로젝트의 전역 CSS 설정에 따라 결정됩니다.
-- 일부 아이콘은 색상 변경이 제한될 수 있으므로, 해당 아이콘의 상세 페이지를 참고해야 합니다.
-
-<BorderBox>
-  <Flex direction={'row'} gap={'2rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textRed'} icon={'cancel'} width={60} height={60} />
-    <CarmoreIcon className={'textOrange'} icon={'cancel'} width={60} height={60} />
-    <CarmoreIcon className={'textGreen'} icon={'cancel'} width={60} height={60} />
-    <CarmoreIcon className={'textBlue'} icon={'cancel'} width={60} height={60} />
-    <CarmoreIcon className={'textPurple'} icon={'cancel'} width={60} height={60} />
-  </Flex>
-</BorderBox>
+<ColorCompareList icon={'cancel'} colors={['red', 'orange', 'green', 'blue', 'purple']} />
 
 ```css
 .text-red {
@@ -114,17 +95,11 @@ import { CarmoreIcon } from '@o2-ui/carmore-icon';
 `role`, `aria-label` 등의 속성을 설정하는 것을 권장합니다.
 
 - `role` 의 기본값은 'img' 입니다.
-- `aria-label` 의 기본값은 '취소하기' 입니다.
+- `aria-label` 의 기본값은 '더 아래로' 입니다.
 - 기본 접근성 속성이 적용되어 있지만, 필요에 따라 커스터마이징할 수 있습니다.
 - _(아이콘에 마우스를 올려보세요.)_
 
-<BorderBox>
-  <Flex direction={'row'} gap={'4rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textPrimary'} icon={'cancel'} width={60} height={60} />
-    <CarmoreIcon icon={'cancel'} aria-label={'닫기'} width={60} height={60} />
-    <CarmoreIcon icon={'cancel'} aria-label={'삭제'} width={60} height={60} />
-  </Flex>
-</BorderBox>
+<A11yCompareList icon={'cancel'} ariaLabels={[undefined, '닫기', '삭제']} />
 
 ```tsx
 <CarmoreIcon icon={'cancel'} ... /> // 기본값('취소하기') 적용
