--- a/docs/carmore-icon/usage.mdx
+++ b/docs/carmore-icon/usage.mdx
@@ -4,10 +4,11 @@ title: Usage
 pagination_next: null
 ---
 
-import BorderBox from '@site/src/components/BorderBox';
-import Flex from '@site/src/components/Flex';
+import IconProfile from '@site/src/molecules/carmore-icon/IconProfile';
 
-import { CarmoreIcon } from '@o2-ui/carmore-icon';
+import A11yCompareList from '@site/src/organisms/carmore-icon/A11yCompareList';
+import ColorCompareList from '@site/src/organisms/carmore-icon/ColorCompareList';
+import SizeCompareList from '@site/src/organisms/carmore-icon/SizeCompareList';
 
 # Usage
 
@@ -63,14 +64,7 @@ import '@o2-ui/react-icon/index.css';
 - 숫자를 직접 지정할 수 있으며, px, rem, % 같은 단위가 포함된 문자열도 허용됩니다.
   - (단, 아이콘의 원래 비율은 고정되어 있어 변경할 수 없습니다.)
 
-<BorderBox>
-  <Flex direction={'row'} gap={'2rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textPrimary'} icon={'user'} />
-    <CarmoreIcon icon={'user'} width={30} height={30} />
-    <CarmoreIcon icon={'user'} width={'3rem'} height={'3rem'} />
-    <CarmoreIcon icon={'user'} width={'5rem'} height={'5rem'} />
-  </Flex>
-</BorderBox>
+<SizeCompareList icon={'user'} sizes={['1.5rem', 30, '48px', '5rem']} />
 
 ```tsx
 <CarmoreIcon icon={'user'} ... /> // 기본값('1.5rem') 적용
@@ -89,15 +83,7 @@ import '@o2-ui/react-icon/index.css';
 - 기본 색상은 프로젝트의 전역 CSS 설정에 따라 결정됩니다.
 - 일부 아이콘은 색상 변경이 제한될 수 있으므로, 해당 아이콘의 상세 페이지를 참고해야 합니다.
 
-<BorderBox>
-  <Flex direction={'row'} gap={'2rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textRed'} icon={'check'} width={60} height={60} />
-    <CarmoreIcon className={'textOrange'} icon={'check'} width={60} height={60} />
-    <CarmoreIcon className={'textGreen'} icon={'check'} width={60} height={60} />
-    <CarmoreIcon className={'textBlue'} icon={'check'} width={60} height={60} />
-    <CarmoreIcon className={'textPurple'} icon={'check'} width={60} height={60} />
-  </Flex>
-</BorderBox>
+<ColorCompareList icon={'check'} colors={['red', 'orange', 'green', 'blue', 'purple']} />
 
 ```css
 .text-red {
@@ -139,13 +125,7 @@ import '@o2-ui/react-icon/index.css';
 - 기본 접근성 속성이 적용되어 있지만, 필요에 따라 커스터마이징할 수 있습니다.
 - _(아이콘에 마우스를 올려보세요.)_
 
-<BorderBox>
-  <Flex direction={'row'} gap={'4rem'} alignItems={'center'} justifyContent={'center'}>
-    <CarmoreIcon className={'textPrimary'} icon={'back-btn'} width={60} height={60} />
-    <CarmoreIcon icon={'back-btn'} aria-label={'화살표'} width={60} height={60} />
-    <CarmoreIcon icon={'back-btn'} aria-label={'왼쪽 화살표'} width={60} height={60} />
-  </Flex>
-</BorderBox>
+<A11yCompareList icon={'back-btn'} ariaLabels={[undefined, '화살표', '왼쪽 화살표']} />
 
 ```tsx
 <CarmoreIcon icon={'back-btn'} ... /> // 기본값('뒤로가기') 적용
